<pre>
2007-XX-XX:
	* version 0.5.2
	* added new :sidebar and :sbclose commands
	* added 'more' and standard more-prompt key mappings to control
	  behaviour of the message list pager 
	* added 'hlsearchstyle' option to allow for user CSS styling of the
	  highlighted text strings when 'hlsearch' is set
	* added 'linksearch' option to restrict page searches to link text - \U
	  and \u can be used in the search pattern to override 'linksearch'
	* added a visual bell and replaced 'beep' with 'visualbell'
	* added 'hlsearch','incsearch', 'ignorecase' and 'smartcase' options

2007-09-03:
	* version 0.5.1
	* native / and ? search and n and N working again
	* the URL in the status line can be selected with the mouse again
	* the Windows default RC file is now ~/_vimperatorrc and the plugin
	  directory is ~/vimperator/plugin
	* commandline history now works properly on Windows
	* filename completion now works on Windows
	* the Bookmarks Toolbar Folder is now read when bookmarks are first
	  loaded - it was skipped entirely in the past
	* fixed search for :open (previously needed to do :o <tab> ONCE to
	  initialize them)
	* added :set {option}! support to toggle a boolean option's value
	* added :set all and :set all& support to show the current value of all
	  options and to reset all options to their default value
	* :tabmove! wrapping works again

2007-08-16:
	* version 0.5
	* :map support (also :noremap, :unmap)
	* :bmarks and :history now use the multiline message window for output
	* rename :bm, :bmadd, and :bmdel to :bmarks, :bmark, and :delbmarks respectively
	* new :normal command
	* the command line keeps focus now, even when clicking outside of it
	* vimperator.events.feedkeys("2zi") support for scripts
	* Ctrl-U/Ctrl-D for scrolling the window up/down and the associated
	'scroll' option
	* files in ~/.vimperator/plugin/ are auto-sourced
	* :winopen support (multiple windows still very very experimental)
	* 'activate' option implemented